views for the sign in, sign up activity almost finished (todo: design of the app bar)

--- a/app/src/main/res/layout/activity_sign_in_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_in_sign_up.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             app:tabBackground="@android:color/white"
             app:tabIndicatorColor="@color/design_default_color_primary"
-            app:tabTextColor="@android:color/black"></android.support.design.widget.TabLayout>
+            app:tabTextColor="@android:color/black" />
 
     </android.support.design.widget.AppBarLayout>
 
