--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#2E9BF8"
-        android:endColor="#B5DCFF"
+        android:startColor="#076cc5"
+        android:endColor="#6bb7fa"
         android:angle="45"/>
 </shape>
