--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -34,20 +35,20 @@
         app:layout_constraintGuide_percent="0.1" />
 
     <TextView
-        android:id="@+id/username_id"
+        android:id="@+id/username_sign_in_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Username"
+        android:text="@string/username_txt"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <EditText
-        android:id="@+id/input_username_id"
+        android:id="@+id/input_sign_in_username_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -55,14 +56,15 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
+        android:hint="@string/your_username_txt"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/username_id"
+        app:layout_constraintTop_toBottomOf="@+id/username_sign_in_id"
         android:theme="@style/inputFieldHighlight"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/passwd_sign_in_txt_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -70,13 +72,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Password"
+        android:text="@string/password_txt"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/input_username_id" />
+        app:layout_constraintTop_toBottomOf="@+id/input_sign_in_username_id" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/passwd_input_sign_in_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -85,11 +87,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
-        android:hint="******"
+        android:hint="@string/passwd_hint5"
         android:inputType="textPassword"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/passwd_sign_in_txt_id"
         android:theme="@style/inputFieldHighlight" />
 
     <android.support.constraint.Guideline
@@ -105,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/round_button"
-        android:text="Sign In"
+        android:text="@string/sign_in_txt"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -118,8 +120,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:background="@android:color/transparent"
-        android:text="Forgotten password?"
-        android:textColor="@android:color/black"
+        android:text="@string/forgotten_password_txt"
+        android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
