- Fix back button on toolbar - Code reorganisation in packages - Same view/edit activity for student and tutor (same actions performed regardless of the user's role) - getProfilePicBitmap written to download profile pic from firestore only when necessary (not called atm) - View list of subjects (learning needs for students, tutoring subjects for tutors)

--- a/app/src/main/res/layout/activity_user_profile_edit.xml
+++ b/app/src/main/res/layout/activity_user_profile_edit.xml
@@ -5,21 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".StudentProfileActivity">
+    tools:context=".users.UserProfileActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/gradient"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient">
 
+        <!--<ImageView
+            android:id="@+id/profile_picture_edit_id"
+            android:layout_width="79dp"
+            android:layout_height="96dp"
+            android:layout_marginStart="164dp"
+            android:paddingTop="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_user_avatar" />-->
+
         <!-- Third-party libraryto render circular image view easily and rapidly
              Dodenhof, H, A circular ImageView for Android, GitHub repository, https://github.com/hdodenhof/CircleImageView -->
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_picture_view_id"
+            android:id="@+id/profile_picture_edit_id"
             android:layout_width="79dp"
             android:layout_height="96dp"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:paddingTop="24dp"
             android:src="@drawable/ic_user_avatar"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toTopOf="@+id/username_profile_id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +63,7 @@
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_picture_view_id" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_picture_edit_id" />
 
         <TextView
             android:id="@+id/email_profile_id"
@@ -49,6 +78,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/username_profile_id" />
+
+        <ImageView
+            android:id="@+id/upload_pic_button_id"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toTopOf="@+id/username_profile_id"
+            app:layout_constraintStart_toEndOf="@+id/profile_picture_edit_id"
+            app:layout_constraintTop_toTopOf="@+id/profile_picture_edit_id"
+            app:layout_constraintVertical_bias="0.645"
+            app:srcCompat="@android:drawable/ic_menu_edit"
+            android:contentDescription="@string/edit_pen_button_description" />
 
     </android.support.constraint.ConstraintLayout>
 
