--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -7,6 +7,20 @@
     android:orientation="vertical"
     tools:context=".ForgottenPasswordActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/gradient"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <TextView
         android:id="@+id/email_instructions_id"
         android:layout_width="match_parent"
