--- a/app/src/main/res/layout/content_view_profile.xml
+++ b/app/src/main/res/layout/content_view_profile.xml
@@ -5,36 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".StudentProfileActivity">
+    tools:context=".users.UserProfileActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient">
 
-        <!--<ImageView
-            android:id="@+id/profile_picture_edit_id"
-            android:layout_width="79dp"
-            android:layout_height="96dp"
-            android:layout_marginStart="164dp"
-            android:paddingTop="24dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_user_avatar" />-->
-
         <!-- Third-party libraryto render circular image view easily and rapidly
              Dodenhof, H, A circular ImageView for Android, GitHub repository, https://github.com/hdodenhof/CircleImageView -->
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_picture_edit_id"
+            android:id="@+id/profile_picture_view_id"
             android:layout_width="79dp"
             android:layout_height="96dp"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:paddingTop="24dp"
             android:src="@drawable/ic_user_avatar"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@+id/username_profile_id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,13 +28,12 @@
             android:id="@+id/username_profile_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_picture_edit_id" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_picture_view_id" />
 
         <TextView
             android:id="@+id/email_profile_id"
@@ -57,7 +41,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
-            android:text="TextView"
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -65,25 +48,47 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/username_profile_id" />
 
-        <ImageView
-            android:id="@+id/upload_pic_button_id"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@+id/username_profile_id"
-            app:layout_constraintStart_toEndOf="@+id/profile_picture_edit_id"
-            app:layout_constraintTop_toTopOf="@+id/profile_picture_edit_id"
-            app:layout_constraintVertical_bias="0.645"
-            app:srcCompat="@android:drawable/ic_menu_edit"
-            android:contentDescription="@string/edit_pen_button_description" />
-
     </android.support.constraint.ConstraintLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/subject_list_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="8dp"
+        android:textAlignment="center"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/subjects_instructions_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp" />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:scrollbarStyle="outsideOverlay" />
+
+        <com.alphabetik.Alphabetik
+            android:id="@+id/alphSectionIndex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="5dp"
+            android:padding="3dp"
+            app:fontSize="14sp"
+            app:itemsColor="@color/design_default_color_primary" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
