Edit list of subjects for students and tutors Still missing: - save edited list of subjects to Firebase - get all subjects available in the app

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -87,17 +87,18 @@
 
         <ListView
             android:id="@+id/listView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scrollbarStyle="outsideOverlay" />
+            android:scrollbarStyle="outsideOverlay"
+            android:listSelector="@android:color/transparent"/> <!-- Disable ripple effect -->
 
         <com.alphabetik.Alphabetik
             android:id="@+id/alphSectionIndex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:padding="3dp"
             app:fontSize="14sp"
             app:itemsColor="@color/design_default_color_primary" />
