--- a/app/src/main/res/layout/activity_user_profile_edit.xml
+++ b/app/src/main/res/layout/activity_user_profile_edit.xml
@@ -57,7 +57,6 @@
             android:id="@+id/username_profile_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@android:color/white"
@@ -71,7 +70,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
-            android:text="TextView"
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -95,9 +93,53 @@
     </android.support.constraint.ConstraintLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/subject_list_name_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="8dp"
+        android:textAlignment="center"
+        android:textStyle="bold" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scrollbarStyle="outsideOverlay" />
+
+            <com.alphabetik.Alphabetik
+                android:id="@+id/alphSectionIndex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="5dp"
+                android:padding="3dp"
+                app:fontSize="14sp"
+                app:itemsColor="@color/design_default_color_primary" />
+
+        </LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_save_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="16dp"
+            android:src="@android:drawable/ic_menu_save"
+            app:backgroundTint="@android:color/holo_orange_light" />
+
+    </FrameLayout>
+
 
 </LinearLayout>
