--- a/app/src/main/res/layout/user_admin_item_layout.xml
+++ b/app/src/main/res/layout/user_admin_item_layout.xml
@@ -9,11 +9,11 @@
         android:layout_height="match_parent"
         android:layout_weight="70">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/userImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:src="@drawable/ic_user_avatar" />
     </FrameLayout>
 
     <LinearLayout
