Slight update of the navbars for students and tutors. Sign out included in these navbars

--- a/app/src/main/res/layout/activity_main_tutor.xml
+++ b/app/src/main/res/layout/activity_main_tutor.xml
@@ -20,6 +20,15 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer">
+
+        <Button
+            android:id="@+id/log_out_button_id"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:layout_margin="16dp"
+            android:text="@string/log_out_text" />
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
