- Fixed visibility issues when navigating back and forth between view profile and edit profile and emptying the list of subjects and populating it again (issue #11) - Continuing on #12 (toolbar + back navigation added)

--- a/app/src/main/res/layout/activity_search_tutors.xml
+++ b/app/src/main/res/layout/activity_search_tutors.xml
@@ -5,14 +5,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/search_tutors_title1_id"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:gravity="center"
-            android:text="@string/search_tutors_option1_txt" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/gradient"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <TextView
+        android:id="@+id/search_tutors_title1_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:text="@string/search_tutors_option1_txt" />
 
         <Button
             android:id="@+id/search_tutors_option1"
