--- a/app/src/main/res/layout/activity_view_request_session.xml
+++ b/app/src/main/res/layout/activity_view_request_session.xml
@@ -23,7 +23,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient">
+        android:background="@drawable/gradient"
+        android:layout_weight="1">
 
         <!-- Third-party libraryto render circular image view easily and rapidly
              Dodenhof, H, A circular ImageView for Android, GitHub repository, https://github.com/hdodenhof/CircleImageView -->
@@ -66,7 +67,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="70"
+        android:layout_weight="60"
         android:orientation="vertical">
 
         <LinearLayout
@@ -96,68 +97,89 @@
             android:layout_height="wrap_content"
             android:text="@string/meeting_invitation_label" />
 
-        <CalendarView
-            android:id="@+id/calendarView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/time_label" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="80">
 
-            <EditText
-                android:id="@+id/time_edit_text"
+            <com.squareup.timessquare.CalendarPickerView
+                android:id="@+id/calendar_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="80"
-                android:editable="true"
-                android:ems="10"
-                android:hint="HH:MM"
-                android:inputType="time" />
+                android:layout_height="match_parent"
+                android:scrollbarStyle="outsideOverlay"
+                android:clipToPadding="false"
+                android:background="#FFFFFF"
+                android:layout_alignParentTop="true"
+                android:layout_above="@+id/textView4"/>
 
         </LinearLayout>
+
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="20"
+        android:layout_weight="1"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/accept_request_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/holo_green_light"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="@string/accept_action"
-            android:textColor="@android:color/white" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/decline_request_button"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/time_label" />
+
+            <EditText
+                android:id="@+id/time_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="HH:MM"
+                android:inputType="time" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/holo_red_light"
             android:gravity="center"
-            android:padding="8dp"
-            android:text="@string/decline_action"
-            android:textColor="@android:color/white" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/accept_request_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@android:color/holo_green_light"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="@string/accept_action"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/decline_request_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@android:color/holo_red_light"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="@string/decline_action"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
     </LinearLayout>
 
 
