--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -89,8 +89,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scrollbarStyle="outsideOverlay"
-            android:listSelector="@android:color/transparent"/> <!-- Disable ripple effect -->
+            android:scrollbarStyle="outsideOverlay"/>
 
         <com.alphabetik.Alphabetik
             android:id="@+id/alphSectionIndex"
