Searching tutors functionality for students (cf issue #12)

--- a/app/src/main/res/layout/activity_matched_tutors_activiyt.xml
+++ b/app/src/main/res/layout/activity_matched_tutors_activiyt.xml
@@ -37,7 +37,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:listSelector="@android:color/transparent"
-            android:scrollbarStyle="outsideOverlay" />
+            android:scrollbarStyle="outsideOverlay"
+            android:drawSelectorOnTop="true" />
 
         <com.alphabetik.Alphabetik
             android:id="@+id/alphSectionIndex"
