--- a/app/src/main/res/layout/activity_view_tutor_profile.xml
+++ b/app/src/main/res/layout/activity_view_tutor_profile.xml
@@ -42,25 +42,15 @@
             android:id="@+id/username_profile_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@android:color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_picture_view_id" />
-
-        <TextView
-            android:id="@+id/email_profile_id"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
             android:textAlignment="center"
-            android:textColor="@android:color/background_light"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/username_profile_id" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_picture_view_id" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -69,40 +59,75 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/subjects_tutored_txt"
         android:textAlignment="center"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/subjects_instructions_id"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:ignore="UselessParent">
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scrollbarStyle="outsideOverlay"
+                android:listSelector="@android:color/transparent" /> <!-- Disable ripple effect -->
+
+            <com.alphabetik.Alphabetik
+                android:id="@+id/alphSectionIndex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="5dp"
+                android:padding="3dp"
+                app:fontSize="14sp"
+                app:itemsColor="@color/design_default_color_primary" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <ListView
-            android:id="@+id/listView"
+        <Button
+            android:id="@+id/session_request_button_id"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="12dp"
             android:layout_weight="1"
-            android:scrollbarStyle="outsideOverlay"
-            android:listSelector="@android:color/transparent" /> <!-- Disable ripple effect -->
+            android:background="@drawable/round_button"
+            android:drawableStart="@drawable/ic_session_request"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="@string/request_a_session_txt"
+            android:textColor="@android:color/white"
+            tools:ignore="ButtonStyle" />
 
-        <com.alphabetik.Alphabetik
-            android:id="@+id/alphSectionIndex"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/chat_button_id"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="5dp"
-            android:padding="3dp"
-            app:fontSize="14sp"
-            app:itemsColor="@color/design_default_color_primary" />
-
+            android:layout_margin="12dp"
+            android:layout_weight="1"
+            android:background="@drawable/round_button"
+            android:drawableStart="@android:drawable/sym_action_chat"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="@string/chat_txt"
+            android:textColor="@android:color/white"
+            tools:ignore="ButtonStyle" />
     </LinearLayout>
-
 
 </LinearLayout>
