Add activities form conversation and requests
Added listViews to show the requests and conversations.

--- a/app/src/main/res/menu/activity_main_tutor_drawer.xml
+++ b/app/src/main/res/menu/activity_main_tutor_drawer.xml
@@ -9,7 +9,7 @@
         android:title="@string/requested_sessions_txt" />
 
     <item
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_conversations"
         android:icon="@android:drawable/sym_action_chat"
         android:title="@string/my_conversations_txt" />
 
