--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -38,20 +39,23 @@
             android:id="@+id/editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="textAutoComplete"/>
+            android:inputType="textAutoComplete" />
 
         <Button
             android:id="@+id/send_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_weight="1"
-            android:text="@string/send"
             android:background="@drawable/round_button"
             android:drawableStart="@android:drawable/sym_action_chat"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
+            android:text="@string/send"
             android:textColor="@android:color/white"
             tools:ignore="ButtonStyle" />
 
